[gd_scene load_steps=38 format=3 uid="uid://bospgqkt5v11w"]

[ext_resource type="Script" path="res://scripts/class_peeker/ClassPeeker.gd" id="1_7uonm"]
[ext_resource type="Texture2D" uid="uid://f1b4iqrwl4yt" path="res://assets/class_peeker/bgIlluServeur.jpg" id="1_sgq1h"]
[ext_resource type="Texture2D" uid="uid://bun3ycrmiu6rv" path="res://assets/classes/logo/symbol_1.png" id="3_m2pd1"]
[ext_resource type="Texture2D" uid="uid://bqyrti6v44xi3" path="res://assets/classes/logo/symbol_2.png" id="4_od5uc"]
[ext_resource type="Texture2D" uid="uid://dc0dilvcg72ym" path="res://assets/classes/logo/symbol_3.png" id="5_tskau"]
[ext_resource type="Texture2D" uid="uid://nojs28415sro" path="res://assets/classes/logo/symbol_4.png" id="6_s3dbf"]
[ext_resource type="Texture2D" uid="uid://d2g8ahy3yg0kd" path="res://assets/classes/logo/symbol_5.png" id="7_r5o52"]
[ext_resource type="Texture2D" uid="uid://hhrmrwuodr6y" path="res://assets/classes/logo/symbol_6.png" id="8_8ej3e"]
[ext_resource type="Texture2D" uid="uid://cjrj047mpc7dr" path="res://assets/classes/logo/symbol_7.png" id="9_q553h"]
[ext_resource type="Texture2D" uid="uid://birdjfrgssk4q" path="res://assets/classes/logo/symbol_8.png" id="10_abd6x"]
[ext_resource type="Texture2D" uid="uid://br3718xo4hhgu" path="res://assets/classes/logo/symbol_9.png" id="11_4py68"]
[ext_resource type="Texture2D" uid="uid://po5sfqi0bd4o" path="res://assets/classes/logo/symbol_10.png" id="12_phxy0"]
[ext_resource type="Texture2D" uid="uid://davpexaplv48o" path="res://assets/classes/logo/symbol_11.png" id="13_lguh3"]
[ext_resource type="Texture2D" uid="uid://dnr0qbth17b5c" path="res://assets/classes/logo/symbol_12.png" id="14_dpocx"]
[ext_resource type="Texture2D" uid="uid://cxqv4ft6flh3n" path="res://assets/classes/logo/symbol_13.png" id="15_wr7yg"]
[ext_resource type="Texture2D" uid="uid://cihhreqscbmq2" path="res://assets/classes/logo/symbol_14.png" id="16_ywbox"]
[ext_resource type="Texture2D" uid="uid://buvfvucibp7lr" path="res://assets/classes/logo/symbol_15.png" id="17_lo0ek"]
[ext_resource type="Texture2D" uid="uid://dh7an8h6dkru5" path="res://assets/classes/logo/symbol_16.png" id="18_2ly1l"]
[ext_resource type="Texture2D" uid="uid://d1w310itmucff" path="res://assets/classes/logo/symbol_17.png" id="19_c7vg3"]
[ext_resource type="Texture2D" uid="uid://dgue8gx17evoo" path="res://assets/classes/logo/symbol_18.png" id="20_3stw5"]
[ext_resource type="Texture2D" uid="uid://dsgor00d8u0a6" path="res://assets/classes/logo/symbol_19.png" id="21_3slnw"]
[ext_resource type="Theme" uid="uid://c7aqcuf0u3rkj" path="res://resources/themes/main_theme.tres" id="22_dop45"]
[ext_resource type="Texture2D" uid="uid://dtnvde1gv6735" path="res://assets/classes/logo_transparent/logo_transparent_1.png" id="22_ogkau"]
[ext_resource type="Texture2D" uid="uid://bmgkmqudqocy3" path="res://assets/class_peeker/background_levelup_banner.png" id="23_itj0c"]
[ext_resource type="Texture2D" uid="uid://dc4kur4fk7phx" path="res://assets/common/block/block_border_scratch.png" id="23_o871w"]
[ext_resource type="Texture2D" uid="uid://qltli0blw15h" path="res://assets/common/button/btn_green_normal.png" id="24_07i0a"]
[ext_resource type="FontFile" uid="uid://duac7keqvubh2" path="res://assets/font/Tahoma Regular font.ttf" id="24_d7krg"]
[ext_resource type="PackedScene" uid="uid://bey8pcrl726xa" path="res://scenes/class_peeker/class_peeker_description.tscn" id="24_g77te"]
[ext_resource type="Texture2D" uid="uid://cypqdcnr1uakv" path="res://assets/common/button/btn_green_over.png" id="25_y4bdj"]
[ext_resource type="Texture2D" uid="uid://crr1cpji0x41k" path="res://assets/common/button/btn_green_pressed.png" id="26_x4168"]
[ext_resource type="Texture2D" uid="uid://bw6i2v35exff6" path="res://assets/common/button/btn_green_disabled.png" id="27_y6qfc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ik8s"]
bg_color = Color(0.196078, 0.196078, 0.196078, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s3f3t"]
texture = ExtResource("23_o871w")
texture_margin_left = 15.0
texture_margin_top = 10.0
texture_margin_right = 15.0
texture_margin_bottom = 10.0
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_a6gc0"]
texture = ExtResource("24_07i0a")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ji3v4"]
texture = ExtResource("25_y4bdj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gxji8"]
texture = ExtResource("26_x4168")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qstv2"]
texture = ExtResource("27_y6qfc")

[node name="ClassPeeker" type="CanvasLayer" node_paths=PackedStringArray("bselect", "class_buttons", "clogo", "clabel", "role_container", "spells", "passif_label", "description")]
script = ExtResource("1_7uonm")
bselect = NodePath("SelectButton")
class_buttons = NodePath("Buttons")
clogo = NodePath("ClassPanel/HBC/Middle/ClassLogoTransparent")
clabel = NodePath("ClassPanel/HBC/Middle/Banner/ClassLabel")
role_container = NodePath("ClassPanel/HBC/MarginContainer/Roles/RoleContainer")
spells = NodePath("ClassPanel/HBC/PanelContainer/MarginContainer/Spells")
passif_label = NodePath("ClassPanel/HBC/MarginContainer/Roles/PanelContainer/MarginContainer/VBC/PassifLabel")
description = NodePath("ClassPanel/ClassPeekerDescription")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sgq1h")
expand_mode = 3
stretch_mode = 5

[node name="Buttons" type="Control" parent="."]
custom_minimum_size = Vector2(0, 305)
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -332.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0

[node name="ButtonsContainer1" type="HBoxContainer" parent="Buttons"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -768.0
offset_right = 768.0
offset_bottom = 150.0
grow_horizontal = 2
alignment = 1

[node name="ButtonsContainer2" type="HBoxContainer" parent="Buttons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -691.0
offset_top = -150.0
offset_right = 691.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ClassPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -768.0
offset_top = -403.0
offset_right = 768.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("22_dop45")

[node name="HBC" type="HBoxContainer" parent="ClassPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ClassPanel/HBC"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Roles" type="Control" parent="ClassPanel/HBC/MarginContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="RoleContainer" type="HBoxContainer" parent="ClassPanel/HBC/MarginContainer/Roles"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -70.5
offset_bottom = -70.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="ClassPanel/HBC/MarginContainer/Roles"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -88.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8

[node name="Background" type="PanelContainer" parent="ClassPanel/HBC/MarginContainer/Roles/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7ik8s")

[node name="Scratch" type="Panel" parent="ClassPanel/HBC/MarginContainer/Roles/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_s3f3t")

[node name="MarginContainer" type="MarginContainer" parent="ClassPanel/HBC/MarginContainer/Roles/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBC" type="VBoxContainer" parent="ClassPanel/HBC/MarginContainer/Roles/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ClassPanel/HBC/MarginContainer/Roles/PanelContainer/MarginContainer/VBC"]
layout_mode = 2
text = "Passif"
horizontal_alignment = 1

[node name="PassifLabel" type="Label" parent="ClassPanel/HBC/MarginContainer/Roles/PanelContainer/MarginContainer/VBC"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Description du passif"
vertical_alignment = 1
autowrap_mode = 3

[node name="Middle" type="Control" parent="ClassPanel/HBC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Banner" type="TextureRect" parent="ClassPanel/HBC/Middle"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -45.5
offset_top = -44.5
offset_right = 45.5
offset_bottom = 91.5
grow_horizontal = 2
texture = ExtResource("23_itj0c")

[node name="ClassLabel" type="Label" parent="ClassPanel/HBC/Middle/Banner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -38.5
offset_right = 232.0
offset_bottom = 1.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Class Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClassLogoTransparent" type="TextureRect" parent="ClassPanel/HBC/Middle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -104.5
offset_right = 150.0
offset_bottom = 195.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
texture = ExtResource("22_ogkau")
expand_mode = 3
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="ClassPanel/HBC"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Background" type="PanelContainer" parent="ClassPanel/HBC/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7ik8s")

[node name="Scratch" type="Panel" parent="ClassPanel/HBC/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_s3f3t")

[node name="MarginContainer" type="MarginContainer" parent="ClassPanel/HBC/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="Spells" type="VBoxContainer" parent="ClassPanel/HBC/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="ClassPanel/HBC/PanelContainer/MarginContainer/Spells"]
layout_mode = 2
text = "Liste des sorts
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpellContainer1" type="HBoxContainer" parent="ClassPanel/HBC/PanelContainer/MarginContainer/Spells"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="SpellContainer2" type="HBoxContainer" parent="ClassPanel/HBC/PanelContainer/MarginContainer/Spells"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="SpellContainer3" type="HBoxContainer" parent="ClassPanel/HBC/PanelContainer/MarginContainer/Spells"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="SpellContainer4" type="HBoxContainer" parent="ClassPanel/HBC/PanelContainer/MarginContainer/Spells"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="SelectionnerLabel" type="Label" parent="ClassPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Sélectionnez une classe"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClassPeekerDescription" parent="ClassPanel" instance=ExtResource("24_g77te")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.5
offset_top = -56.5
offset_right = 266.5
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2

[node name="SelectButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 86.0
offset_right = 100.0
offset_bottom = 136.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("24_d7krg")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_a6gc0")
theme_override_styles/hover = SubResource("StyleBoxTexture_ji3v4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gxji8")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qstv2")
disabled = true
text = "Selectionner"

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 50)
offset_left = 30.0
offset_top = 30.0
offset_right = 230.0
offset_bottom = 80.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("24_d7krg")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxTexture_a6gc0")
theme_override_styles/hover = SubResource("StyleBoxTexture_ji3v4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_gxji8")
theme_override_styles/disabled = SubResource("StyleBoxTexture_qstv2")
text = "Retour"

[node name="ClassButtons" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="1" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("3_m2pd1")
expand_icon = true

[node name="2" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("4_od5uc")
expand_icon = true

[node name="3" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("5_tskau")
expand_icon = true

[node name="4" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("6_s3dbf")
expand_icon = true

[node name="5" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("7_r5o52")
expand_icon = true

[node name="6" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("8_8ej3e")
expand_icon = true

[node name="7" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("9_q553h")
expand_icon = true

[node name="8" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("10_abd6x")
expand_icon = true

[node name="9" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("11_4py68")
expand_icon = true

[node name="10" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("12_phxy0")
expand_icon = true

[node name="11" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("13_lguh3")
expand_icon = true

[node name="12" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("14_dpocx")
expand_icon = true

[node name="13" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("15_wr7yg")
expand_icon = true

[node name="14" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("16_ywbox")
expand_icon = true

[node name="15" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("17_lo0ek")
expand_icon = true

[node name="16" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("18_2ly1l")
expand_icon = true

[node name="17" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("19_c7vg3")
expand_icon = true

[node name="18" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("20_3stw5")
expand_icon = true

[node name="19" type="Button" parent="ClassButtons" groups=["class_button"]]
custom_minimum_size = Vector2(150, 150)
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
icon = ExtResource("21_3slnw")
expand_icon = true
